2007-02-13 Chris Morley

	Clear OBMol objects by default at start of ReadMolecule.
	
	* include/openbabel/base.h: Add CastAndClear().
	
	* src/*format.cpp(ReadMolecule): Replace dynamic_cast by a call
	to CastAndClear().
	
	* include/openbabel/obconversion.h, src/obconversion.cpp
	(Read, ReadString, ReadFilemove): Remove clearFirst parameter,
	since it is no longer needed. 
	
2007-02-13 Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	Corrected bug 1657817 - wrong name for batch conversion
	of one file - which was due to misinterpretation as 
	splitting operation. Solution requires that the base name
	for output files splitting is not empty - not a big constraint.
	Added extra warning messages and checks in 
	CheckForUnintendedBatch(). Made this function and 
	BatchFileName() and IncrementedFileName() protected.
	
2007-02-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/cansmilesformat.cpp
	(OBMol2Cansmi::AddHydrogenToChiralCenters): Fix PR#1658317 with
	chirality on last atom. Switched iterator to use obiter.h macros.

	* configure.in, configure, src/config.h.in: Add big-endian,
	little-endian check,	which defines WORDS_BIGENDIAN for
	chemdrawcdx.cpp (and other binary formats in the future).

	* src/formats/chemdrawcdx.cpp: Solve compilation problems with
	previous change. (endian.h and byteswap.h are GNU and Linux
	extensions.) Requires declaration of WORDS_BIGENDIAN in
	babelconfig.h (as above for Unix).

	* src/Makefile.am, include/openbabel/Makefile.am,
	src/obconversion.cpp: Remove references to newline.[h, cpp].

	* include/openbabel/lineend.h: Add std namespace declarations to
	solve compilation problems with GCC.

	* include/openbabel/ring.h, src/ring.cpp: Documentation updates,
	added new constructor to simplify OBRingSearch::SaveUniqueRing().

	* src/generic.cpp, include/openbabel/generic.h: Change reference
	of DataSource to DataOrigin, as suggested by Noel.
